# mlops-cifar-classifier

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  install-dev-tools.sh
.github/workflows/: ci.yml  reusable_setup.yml
config/: config.yml
notebooks/: cifar10-custom-resnet-cnn-pytorch-97-acc.ipynb
src/cifar_classifier/: __init__.py  __main__.py
src/cifar_classifier/data/: __init__.py  process_data.py
src/cifar_classifier/model/: __init__.py  model.py  train_model.py
src/cifar_classifier/utils/: __init__.py  config.py  git.py  model.py
tests/: __init__.py
tests/unit/: test_process_data.py  test_train_model.py
